info icon alignment fixed

--- a/src/app/billing/billing-model-overview/billing-model-overview.component.scss
+++ b/src/app/billing/billing-model-overview/billing-model-overview.component.scss
@@ -1167,3 +1167,13 @@ legend.scheduler-border {
     // padding-right: 23%;
   }
 }
+.img_one img {
+  position: relative;
+  top: -2px;
+  width: 12px;
+}
+.img_two img {
+  position: relative;
+  top: -3px;
+  width: 12px;
+}
